--- a/index.html
+++ b/index.html
@@ -1,23 +1,23 @@
 <!DOCTYPE html>
 <html>
     <header>
-        <title>Your Website</title>
+        <title>Daniel's Website</title>
     </header>
 
     <body>
         <center>
-            <h1>This is your title!</h1>
+            <h1>Intro to Engineering 1 - Daniel Lee</h1>
             <img src="https://upload.wikimedia.org/wikipedia/commons/c/c3/NGC_4414_%28NASA-med%29.jpg" width="180px" height="120px">
         </center>
         
         <hr><br><br>
 
         <p>
-            8/20/23 - This is my first journal entry
+            8/25/23 - Today, we attempted to show the importance of continuing to try again after failure through a group exercise. We connected pipes together as a team and tried leading it into a bucket. Obviously, it took more than one try as we had to find out how we would get it done in the most efficient, easiest way, but in the end, we successfully completed the task after realizing that we needed to fix a couple of problems involving the speed of the marble, and the slope of the pipes.
         </p>
 
         <p>
-            8/21/23 - This is my second journal entry
+            fjsdifdjsklfdsk
         </p>
     </body>
 
