--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         </p>
 
         <p>
-            fjsdifdjsklfdsk
+            9/11/23 - So far, we've just started on working on our Rube Goldberg Project. We came up with a base idea for the project, although the build seems a lot harder than we had expected. Since our last journal entry, we have learned how to CAD, which was what we used to plan out our project. 
         </p>
     </body>
 
