--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
         <p>
             9/11/23 - So far, we've just started on working on our Rube Goldberg Project. We came up with a base idea for the project, although the build seems a lot harder than we had expected. Since our last journal entry, we have learned how to CAD, which was what we used to plan out our project. 
         </p>
+        
+        <p>
+            9/25/23 - Finally, we were able to finish our Rube Goldberg project after a week. It took a lot of trial and error in order to realize that our draft wouldn't be accurate enough to actually carry out the project. While we were doing it, we realized we would need to either improvise on some parts or just completely take it out. Another problem was the size, since our draft wasn't too realistic to scale. So, we used a lot more tape than expected to actually hold it up, because it wasn't as stable as we wanted it to be. Eventually, we fixed all our problems after understanding how to work out our lever. It was an incredibly fun project to do, and we learned a lot about a small portion of the engineering world.
     </body>
 
 </html>
