--- a/index.html
+++ b/index.html
@@ -22,6 +22,11 @@
         
         <p>
             9/25/23 - Finally, we were able to finish our Rube Goldberg project after a week. It took a lot of trial and error in order to realize that our draft wouldn't be accurate enough to actually carry out the project. While we were doing it, we realized we would need to either improvise on some parts or just completely take it out. Another problem was the size, since our draft wasn't too realistic to scale. So, we used a lot more tape than expected to actually hold it up, because it wasn't as stable as we wanted it to be. Eventually, we fixed all our problems after understanding how to work out our lever. It was an incredibly fun project to do, and we learned a lot about a small portion of the engineering world. https://youtube.com/shorts/9ABATTihFnQ?si=KoNi6eVfdrgzQp1I
+        </p>
+        
+        <p>
+            9/29/23 - Today, we took the time to understand what were the specific parts of the computer. We had decomposed the structure of the computer, and took the time to reassemble it again. Doing this helped us learn what was inside the PC, and how it works. Recently, we have been learning more about computer engineering, which is why we had this type of activity.
+        </p>
     </body>
 
 </html>
