--- a/index.html
+++ b/index.html
@@ -52,6 +52,10 @@
             <source src = "c3.mov" type = "video/mp4">
             </video>    
         </p>
+        <p>
+            10/26/23 - We have now moved on to Environmental Engineering. In order to learn more about it, we did a project as we do for each section. This time, our goal was to learn to filter water with the provided materials: rocks, sand, cotton, two parts of a bottle, and dirty water. Of course; we had clean water to actually clear up the previous dirt on the bottles. Our plan was to first stack the start of our filtering system with cotton. Then, we stacked a bit of sand, and finally ended it off with the rocks. After out first try, we realized that it took quite a long time and it wasn't filtering as well as we thought it would. So, we decided to restart all over again and try to use less materials so that the water could go through. Unfortunately, we squished the cotton too into the bottle that it was essentially clogged, and not filtering as we wanted it to. So, we had to wait quite a while, drip after drip, to see how the filter would turn out this time, just for it to end the same as it did previously. Obviously we were pretty disappointed, given that class ended with us not feeling satisfied with our result, but we did understand some of the mistakes we were doing.
+        </p>
+        
     </body>
 
 </html>
