--- a/index.html
+++ b/index.html
@@ -61,6 +61,25 @@
         <p>
              <img src = "circuit.png" width = "300px" height = "400">>
         </p>
+        <p>
+            <video width = "500" height ="400" controls = " " loop= " ">
+            <source src = "IMG_3017.MOV" type = "video/mp4">
+            </video>
+            <video width = "500" height ="400" controls = " " loop= " ">
+            <source src = "IMG_3018.MOV" type = "video/mp4">
+            </video>
+            <video width = "500" height ="400" controls = " " loop= " ">
+            <source src = "IMG_3019.MOV" type = "video/mp4">
+            </video>
+            <video width = "500" height ="400" controls = " " loop= " ">
+            <source src = "IMG_3020.MOV" type = "video/mp4">
+            </video>
+            <video width = "500" height ="400" controls = " " loop= " ">
+            <source src = "IMG_3022.MOV" type = "video/mp4">
+            </video>
+            
+        </p>
+        
     </body>
 
 </html>
