--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
             9/25/23 (#3) - Finally, we were able to finish our Rube Goldberg project after a week. It took a lot of trial and error in order to realize that our draft wouldn't be accurate enough to actually carry out the project. While we were doing it, we realized we would need to either improvise on some parts or just completely take it out. Another problem was the size, since our draft wasn't too realistic to scale. So, we used a lot more tape than expected to actually hold it up, because it wasn't as stable as we wanted it to be. Eventually, we fixed all our problems after understanding how to work out our lever. It was an incredibly fun project to do, and we learned a lot about a small portion of the engineering world.
         </p>
         <p>
-            <video width = "500" height ="400" controls = " " loop= " ">
-            <source src = "v1.MOV" type = "video/mp4">
+            <video width = "500" height ="400" controls = "" loop= "">
+            <source src = "https://drive.google.com/file/d/14vCy96mOEUcdw_FHzNYUyMrwfBKDZmas/view?usp=sharing" type = "video/mp4">
             </video>
         </p>
         
