--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
             1/12/2024 (#11) - Today, we focused on chemical engineering, one of our final units to learn. We made something that I've never seen before, called oobleck. It is a glue-like object where if you touch it, it feels like a solid. If you don't put pressure on it and let it fall out of your hands, it becomes a solid. We mixed in water into cornstarch that was given inside a tray. We didn't just dump in the water, but instead we kept putting the water in slowly, so that we could attempt to make the perfect oobleck. It turned out very well, and we enjoyed playing around with it.
         </p>
         <p>
-            
+            <iframe src="https://drive.google.com/file/d/16SJGRe4koIve5WjlYFCDWABqGjGfqLWR/preview" width="500" height="400" allow="autoplay"></iframe>
         </p>
             </body>
 
