--- a/index.html
+++ b/index.html
@@ -89,6 +89,12 @@
         <p>
             <iframe src="https://drive.google.com/file/d/16SJGRe4koIve5WjlYFCDWABqGjGfqLWR/preview" width="500" height="400" allow="autoplay"></iframe>
         </p>
+        <p>
+            2/14/2024 (#12) - We finished our first iteration of the rat trap car today, and we test ran it last class. We ended up failing, but we learned a lot in the process of doing so. First off, we planned it out through influence from a Mark Rober video, but halfway we realized that using the string contraption would be hard for us as connecting the back wheels to the trap was a challenge. All the materials were given to us, so we really just needed to figure out the best possible design to create the most distance. It seemed very easy when we were created our CAD and sketching it out, and even the start of assembling it was fairly simple. We started off by creating the base of the car, to support and connect everything in the vehicle. After we had created this through cardboard, we moved on to figuring out the wheels. As we were creating the wheels, we needed to find a way to get the CDs actually rolling while being stable enough. This also played a large factor to our failures, as it was not stable leading to the wheels not functioning correctly during our testing. Although this was a big problem, the greatest problem was actually connecting the other half of the wheels to the rat trap, as triggering the trap actually didn't get our wheels to go, since no force was created due to the strings not fully unraveling. Because of this, our whole vehicle actually broke down and we had to break it down to realize our problems. Now that we understand our main issues, we look forward to improving these issues and creating an actually functioning car through the calculations that we came up with, which was 29x12, being the length of the arm times the ratio of wheel to axle. We may try to increase this number, as the higher it is, the longer the distance, but our main priority in the end is actually getting the vehicle to work.  
+        </p>
+        <p>
+            <iframe src="https://drive.google.com/file/d/1bfPk2xULW8mA5S51tCF-4k9DvNJeFGGB/preview" width="400" height="500" allow="autoplay"></iframe>
+        </p>
             </body>
 
 </html>
