--- a/index.html
+++ b/index.html
@@ -95,6 +95,18 @@
         <p>
             <iframe src="https://drive.google.com/file/d/1bfPk2xULW8mA5S51tCF-4k9DvNJeFGGB/preview" width="400" height="500" allow="autoplay"></iframe>
         </p>
+        <p>
+            2/26/2024 (#13) - We tested our final iteration of the rat trap. It was a major success. We solved our previous problems of the strings and the wheel, and we also decided to use smaller, more stable materials so that our car wouldn't fall apart as it did last time. Instead of using string, we decided to use the fishing wires, which ended up in our favor. It was a much better, easier process to attach and tangle it compared to the string, so efficiency was another added bonus. When testing it in the cafeteria, we actually ended up getting the longest distance out of every other cars. We knew that we would most likely win, as our test runs led to the idea that we could average around 64ft when working. The calculations were made beforehand and our results matched up with it. OVerall, this was a great learning process as we ended up turning over a completely failure of a car into another idea that was inspired by the original, but a much better version.
+        </p>
+        <p>
+            <iframe src="https://drive.google.com/file/d/1zCShEZjnIp18SfYAthb-WLbtxOduARWf/preview" width="400" height="500" allow="autoplay"></iframe>
+        </p>
+        <p>
+            3/4/2024 (#14) - The current project we are working on is the egg drop challenge, where we attempt to land an egg safely from being thrown off a 3 story building. Our idea is inspired by a lot of similar designs on the internet, where they trap the egg so that it doesn't move using multiple sticks to block it in with a triangle-like shape. After doing this, we plan to create a parachute using a bag or balloon at the top, connected to strings so that it slows down the dropping process, keeping the egg safe. We only have one iteration, so we have to make sure this is as perfect as it gets in the amount of time that we have, which is not much. This is a rather simple challenge compared to the other ones, as it seems more straightfoward than the rest, where you can visualize how the design would look like right off the bat. We plan on having the same success we had with our rat trap car.
+        </p>
+        <p>
+            <iframe src="https://drive.google.com/file/d/135jfGc14HNLhKsvnfOxZb4QPMEOWRyNo/preview" width="300" height="200" allow="autoplay"></iframe>
+        </p>
             </body>
 
 </html>
