--- a/index.html
+++ b/index.html
@@ -107,6 +107,12 @@
         <p>
             <iframe src="https://drive.google.com/file/d/135jfGc14HNLhKsvnfOxZb4QPMEOWRyNo/preview" width="300" height="200" allow="autoplay"></iframe>
         </p>
+        <p>
+            3/14/2024 (#15) - We finished testing our finalized egg drop project. We had a major success by ditching our originial idea of straws to trap the egg, and instead making a box with cotton inside of it to make it more heavier and safer. By making this box, it allowed the parachute (trash bag) to be a lot more useful, as the box was heavy enough to allow the parachute to catch the air. This project was a lot more simple compared to other ones, so we were able to make our box without any problems. Before we actually did our run, we did a couple test runs to make us realize that the bag needed to be a little open to maximize the parachute's use. Once we kept it open, the parachute worked better and was a big part of our success in the actual run. We closed the box shut and tied strings to connect it to the parachute. This is the video of the actual run, where we were very successful, with the egg having no cracks or damages at all. The cotton especially kept it safe, so everything that we put into the project was put to use for the success of the entire run.
+        </p>
+        <p>
+            <iframe src="https://drive.google.com/file/d/13l1oo0jKk0INJ57U2Sf3RfGvPe_kSh6L/preview" width="500" height="400" allow="autoplay"></iframe>
+        </p>
             </body>
 
 </html>
