--- a/index.html
+++ b/index.html
@@ -113,6 +113,24 @@
         <p>
             <iframe src="https://drive.google.com/file/d/13l1oo0jKk0INJ57U2Sf3RfGvPe_kSh6L/preview" width="500" height="400" allow="autoplay"></iframe>
         </p>
+        <p>
+            #16 - We created a contraption to attempt to trap a water balloon using popsicle sticks and rubber bands. We didn't have much of a plan going into this, so we decided to randomly create something that would be as tight as possible on the balloon without having the force to actually pop it. We had only tested it by speedwalking with it, and only had one try during the actual test. So, when it came down to the actual run, before we had even placed the balloon tightly and safe, it had popped. We quickly tried to fix it with another water balloon and run with it, but got only a few seconds on the stick before it fell out and popped. There was definitely less preparation in this project compared to any other, which was mostly the reason for our fail.
+        </p>
+        <p>
+            <iframe src="https://drive.google.com/file/d/1SAMC4osmyS7FqHAl2pqnFWaIZZ47uui5/preview" width="500" height="400" allow="autoplay"></iframe>
+        </p>
+        <p>
+            #17 - A gutter boat was to be created, and we made something inspired by the internet to create a motor that would push us all the way to the end. Unfortunately, we were not able to get much distance because our engine was dependent on how long the rubber band would unfold for. Because the rubber band was so small, our motor would either get jammed, or shoot for a short amount of time. Even though we ultimately failed, what was important was that we came up with an idea that was different from any other model, as the other ones were given energy off a push compared to ours, where the energy was created within the design.
+        </p>
+        <p>
+            <iframe src="https://drive.google.com/file/d/1b6OKZZGh91y_lVazY60IvCpUxAjeOTdq/preview" width="500" height="400" allow="autoplay"></iframe>
+        </p>
+        <p>
+            #18 - For our final project, our task was to create a boat. Due to it being our final project, as well as it being our longest, a lot of effort and thinking had to go into building it. We first had to research what would make a boat float. After finding out what was necessary to keep the boat float by looking at videos of Archimedes principle and buoynancy, we went straight to designing. We came up with the idea of having a boat with a wide surface, and assisting it with a height enough for us to still be able to keep our hands on the side. We were given a roll of tape and carboard, and used it to its fullest. The taping was done after each cardboard piece was cut and put in place. No holes were to be allowed, as having leakage in the boat would have led to us sinking right away. Eventually, over a course of a few weeks, we were finished with our project but was unable to test anything because the cardboard could not have gotten wet. If it were to get wet enough, the cardboard would no longer be stable and our surface would have brought us down. During our test, we were barely able to get distance because our surface was still not stable enough. If we were to retry this, we would have either put more layers on the bottom, or completely covered the bottom with the remaining tape that we had. Overall, although it wasn't a success, we learned a lot about how we can take buoyancy and principles into account to attempt to build something over water.
+        </p>
+        <p>
+            <iframe src="https://drive.google.com/file/d/12QbM1tnZQRU8ZigevOEBSaG5IKIu-Nqp/preview" width="500" height="400" allow="autoplay"></iframe>
+        </p>
             </body>
 
 </html>
